<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_nocart"
            android:id="@+id/txtCartNoItems"
            android:layout_centerInParent="true"
            android:textSize="18dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:id="@+id/layoutCarts"
            android:background="#fff"
            android:layout_height="match_parent">

            <ListView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/lstCarts"
                android:layout_weight="1" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/checkout_shipaddress"
                        android:id="@+id/textView9"
                        android:textColor="#f00"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:id="@+id/editCheckoutItemAddress"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="5dp"
                        android:gravity="center_vertical"
                        android:textSize="18dp" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/differentaddress"
                        android:id="@+id/chkShipOther"
                        android:button="@drawable/drawable_filter_chk"
                        android:textSize="16dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:checked="false"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:id="@+id/editCheckoutItemAddressOther"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="5dp"
                        android:hint="@string/checkout_hintshipaddress" />
                </LinearLayout>
                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sharelocation"
                    android:id="@+id/chkCartShareLocation"
                    android:button="@drawable/drawable_filter_chk"
                    android:textSize="16dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:checked="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" />
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="Total:1000$"
                        android:id="@+id/txtCartTotalPrice"
                        android:layout_weight="1"
                        android:textColor="#385481"
                        android:textSize="14dp"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:layout_marginLeft="10dp"
                        android:lines="1" />
                    <Button
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:text="@string/checkout_checkout"
                        android:id="@+id/btnCartCheckOut"
                        android:layout_marginRight="10dp"
                        android:padding="10dp"
                        android:background="@drawable/drawable_cart_button"
                        android:textColor="#fff"
                        android:layout_marginLeft="10dp" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</LinearLayout>