<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrlFilter"
        android:fillViewport="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/filter_brand"
                    android:id="@+id/textView12"
                    android:textColor="#000"
                    android:textSize="18dp"
                    android:background="#eee"
                    android:paddingLeft="10dp"
                    android:gravity="center_vertical" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:id="@+id/layoutFilterCategory"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"></LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/filter_color"
                    android:textColor="#000"
                    android:textSize="18dp"
                    android:background="#eee"
                    android:paddingLeft="10dp"
                    android:gravity="center_vertical" />


                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:id="@+id/layoutFilterColor"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"></LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/filter_price"
                    android:textColor="#000"
                    android:textSize="18dp"
                    android:background="#eee"
                    android:paddingLeft="10dp"
                    android:gravity="center_vertical" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:id="@+id/layoutFilterPrice"
                    android:layout_marginRight="20dp"></LinearLayout>
            </LinearLayout>
            <Button
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/browse_filter"
                android:id="@+id/btnFilterFilter"
                android:background="@drawable/drawable_green_button"
                android:textColor="#E5E5E5"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>